adding FORM and VALIDATIONS

--- a/src/components/UI/Input/Input.css
+++ b/src/components/UI/Input/Input.css
@@ -26,6 +26,11 @@
 }
 
 
+.Invalid{
+    border:1px solid red;
+    background-color:rgb(240, 196, 196);
+}
+
 .InputElement:focus{
     outline: none;
     background-color: #ccc;
